2010-01-29  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Ariya Hidayat.

        [Qt] Show progress reaching 100% for loads.

        * QtLauncher/locationedit.cpp:
        (LocationEdit::LocationEdit):
        (LocationEdit::setProgress):
        (LocationEdit::reset):
        (LocationEdit::paintEvent):
        * QtLauncher/locationedit.h:

2010-01-29  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Disable the QtLauncher statusbar on Maemo

        https://bugs.webkit.org/show_bug.cgi?id=34330

        * QtLauncher/main.cpp:
        (LauncherWindow::showLinkHover):
        (LauncherWindow::selectElements):

2010-01-29  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Display page loading progress inside the QtLauncher location bar

        https://bugs.webkit.org/show_bug.cgi?id=34210

        * QtLauncher/QtLauncher.pro:
        * QtLauncher/locationedit.cpp: Added.
        (LocationEdit::LocationEdit):
        (LocationEdit::setProgress):
        (LocationEdit::paintEvent):
        * QtLauncher/locationedit.h: Added.
        * QtLauncher/mainwindow.cpp:
        (MainWindow::buildUI):
        * QtLauncher/mainwindow.h:

2010-01-29  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Add support for Maemo zoom keys in QtLauncher

        https://bugs.webkit.org/show_bug.cgi?id=34160

        * QtLauncher/main.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::~LauncherWindow):
        (LauncherWindow::keyPressEvent):
        (LauncherWindow::grabZoomKeys):

2010-01-29  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Implement the display() method of the layout test controller
        https://bugs.webkit.org/show_bug.cgi?id=34258

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp: